pagination added for people and Swagger Documentation concluded
